learning styling and themes and implementing dark theme selector

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,5 +44,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.2'
     testImplementation 'junit:junit:4.12'
 
+    implementation "androidx.preference:preference-ktx:1.1.1"
+
 
 }
