--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,8 +44,11 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.2'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.2'
     testImplementation 'junit:junit:4.12'
+    implementation "androidx.datastore:datastore:1.0.0-alpha05"
 
     implementation "androidx.preference:preference-ktx:1.1.1"
+    implementation "androidx.datastore:datastore-core:1.0.0-alpha05"
+    implementation "androidx.datastore:datastore-preferences:1.0.0-alpha04"
 
 
 }
